<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Loan</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="business_loan_paragraph">देश में छोटे उद्यमों को बढ़ावा देने के लिए सरकार ने कई तरह की लोन स्कीमें शुरू की हैं| प्रधानमंत्री मुद्रा योजना के अलावा अन्य कई स्कीमें भी हैं जिनमें आप छोटी रकम से लेकर बड़े लोन तक ले सकते हैं|  इस समय केंद्र और राज्य सरकार की योजनाओं के हिसाब से आप अपने कारोबार के लिए 50,000 रुपये से लेकर 1 लाख रुपये तक का लोन ले सकते हैं|   वास्तव में बैंक आपकी कारोबारी योजना के हिसाब से आपको लोन देने का फैसला करते हैं| अगर बैंक को यह लगता है कि आपका कारोबार और उससे होने वाला मुनाफा इतना होगा कि आप अपने खर्च पूरे करने के बाद तय अवधि में बैंक का लोन वापस चुकाने में समर्थ होंगे, तभी बैंक आपका लोन मंजूर करता है|  बिजनेस लोन लेने के फायदे क्या हैं? नकदी की आवक कारोबारी जरूरत के लिए पैसे की मदद छोटी और लंबी, दोनों अवधि के लिए वित्तीय जरूरत पूरी होना</string>
    <string name="car_loan_paragraph">घर के साथ एक ब्रांडेड कार लेना हर किसी का सपना होता है| कार से न सिर्फ आपका जीवन आरामदेह बनता है, बल्कि बहुत सी मुश्किलें कम हो जाती हैं| पब्लिक ट्रांसपोर्ट से जूझते हुए दफ्तर पहुंचना या वीकेंड पर घूमने के लिए बाहर जाना, सब कुछ बहुत आसान हो जाता है| पहले कार खरीदना किसी के लिए भी बहुत बड़ी बात होती थी, क्योंकि इसके लिए एकमुश्त रकम खर्च करनी पड़ती थी, लेकिन अब लोन (Car Loan) आसानी से उपलब्ध होने की वजह से यह बहुत आसान हो गया है| बैंक और नॉन बैंकिंग फाइनेंस कंपनी कार लोन (Car Loan) आसान मासिक किस्त पर दे देती हैं, जिससे अब कार खरीदना बहुत आसान हो गया है| इससे आपका बजट भी नहीं बिगड़ता और सुविधा भी मिल जाती है|</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="connect_internet">Please Connect To Internet</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="education_loan_paragraph">सी व्यक्ति की संपूर्ण और सफल जिंदगी के लिए क्वालिटी एजुकेशन बहुत जरुरी है| कुछ लोगों के लिए यह किसी शीर्ष इंस्टीच्यूट से ग्रेजुएशन करना हो सकता है| ऐसे दौर में जब पढ़ाई का खर्च लगातार बढ़ रहा है, देश-विदेश के शीर्ष इंस्टीच्यूट में पढ़ने का खर्च काफी अधिक है| इसे ध्यान में रखते हुए पैरेंट म्युचुअल फंड्स में निवेश करते हैं, कुछ फिक्स्ड डिपॉजिट तो कुछ यूलिप का सहारा लेते हैं| इन सबके बाद भी आपकी पढ़ाई के लिए रकम कम पड़ सकती है| एजुकेशन लोन के रूप में आपको ऐसी परिस्थितियों में काफी मदद मिलती है| यह लोन आपकी जरूरत और उपलब्ध रकम के बीच की खाई को भरता है| एक अध्ययन के अनुसार पढ़ाई का खर्च सालाना 15 फीसदी की दर से बढ़ रहा है| इस समय अगर पढ़ाई का खर्च 2.5 लाख रुपये है तो 15 साल बाद एमबीए करने में 20 लाख रुपये खर्च होंगे|</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_send">Send</string>
    <string name="gold_loan_paragraph">कई बार हमें इमरजेंसी में पैसों की जरूरत होती है| ऐसे में घर में रखा सोना काफी काम आ सकता है| मण्णपुरम फाइनेंस, मुथूट फाइनेंस, आईआईएफएल जैसी कंपनियां गोल्ड लोन की सुविधा देती हैं| सरकारी और निजी क्षेत्र के कुछ बैंक भी गोल्ड लोन देते हैं| इसमें सोने के गहनों, सिक्कों आदि गिरवी रखकर आप कैश ले सकते हैं| यह पैसा चुकाने के बाद गिरवी रखी ज्वेलरी या सोना ग्राहक को वापस कर दिया जाता है|  लोन की रकम पर ब्याज देना पड़ता है| पर्सनल लोन के मुकाबले गोल्ड लोन में ब्याज दर कम होती है| पर्सनल.. कितना ब्याज लगता है ? गोल्ड लोन के लिए फाइनेंस कंपनियों और बैंक की ब्याज दरें अलग-अलग हैं| यह 1 फीसदी से 15 फीसदी तक हैं| उदाहरण के तौर पर आईसीआईसीआई बैंक गोल्ड लोन पर 1 फीसदी से 16.50 फीसदी सालाना तक ब्याज वसूलता है| इसके साथ एक फीसदी प्रोसेसिंग फीस भी लेता है|</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_loan_paragraph">आम तौर पर आप घर/फ्लैट खरीदने, प्लाट या कंस्ट्रक्शन/रिनोवेशन के लिए होम लोन लेते हैं| कई बार होम लोन मकान को बढ़ाने या रिपेयर करने के लिए भी लिया जाता है| हम यहां आपको होम लोन (Home Loan) के बारे में सभी जरुरी जानकारी दे रहे हैं| होम लोन (Home Loan) की प्रक्रिया शुरू करने से पहले इस बात का आंकलन करें कि आप की कमाई कितनी है और उस हिसाब से बैंक कितना लोन दे सकते हैं| आपकी होम लोन (Home Loan) लेने की क्षमता उसे चुकाने की कैपेसिटी पर निर्भर करती है| यह आपकी मासिक कमाई, खर्च और परिजनों की कमाई, संपत्ति, देनदारी, आय में स्थिरता जैसे मसलों पर निर्भर करती है| बैंक सबसे पहले यह देखते हैं कि आप समय पर होम लोन (Home Loan) चुका पाएंगे या नहीं| हर महीने आपके हाथ में जितनी अधिक रकम आएगी, आपके होम लोन (Home Loan) की राशि उतनी बढ़ती जाएगी|</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_app_dis">Support us by give 5 star\10and write your review</string>
    <string name="rate_new">Rate now</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rule1">A loan agreement should be in compliance with state and federal regulations, which will protect both lender and borrower should either side fail to honor the agreement.</string>
    <string name="rule10">Repayment Clause: It is the major element in the loan agreement. This clause specifies how and when the loan is to be repaid by the borrower to the lender. The repayment can be a lump sum or on a periodical basis. In case of periodical payments, it should specify the number of installments due and the date when the installment becomes due.</string>
    <string name="rule2">Applicable loan charges will be bared by the borrower.</string>
    <string name="rule3">This application is only made to guide borrower in the process.</string>
    <string name="rule4">We shouldn\'t be held responsible for any mis-interpretation.</string>
    <string name="rule5">The total guidance of loan process is free of cost using this application.</string>
    <string name="rule6">We do not store any personal information which may lead to any financial loss.</string>
    <string name="rule7">Please fill all the details in the form correctly</string>
    <string name="rule8">A loan agreement clearly specifies the amount of loan (also called Principal Amount) given to the borrower. The document also defines the time period for which the loan is granted.</string>
    <string name="rule9">A loan can be secured or unsecured. In case of a secured loan, generally, some asset, say house or vehicle is pledged as collateral for the loan. In the event of default, the security pledged can be used to recover the loan amount.</string>
    <string name="write_your_feedback_here">Write your feedback here…</string>
</resources>