<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_15dp"
    android:layout_marginRight="@dimen/_15dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="1dp"
    app:layout_constraintEnd_toEndOf="0"
    app:layout_constraintStart_toStartOf="0"
    app:layout_constraintTop_toTopOf="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_rate_feedback"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toTopOf="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/feedback"
            android:textColor="@color/rate_button_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/rate_background"
            android:gravity="top"
            android:hint="@string/write_your_feedback_here"
            android:lines="4"
            android:padding="5dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rate_button_blue"
            android:gravity="center"
            android:text="@string/feedback_send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/et_feedback" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bt_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/bt_send">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/rating_dialog_maybe_later"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
