<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:text="Instant Loan "
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad_view"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:dividerPadding="3dp">

            <TableRow
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="@dimen/_10sdp"
                android:baselineAligned="false"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-&gt;"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rule10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" />
</RelativeLayout>
