<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_15dp"
    android:layout_marginRight="@dimen/_15dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="1dp"
    app:layout_constraintEnd_toEndOf="0"
    app:layout_constraintStart_toStartOf="0"
    app:layout_constraintTop_toTopOf="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_rate_star"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toTopOf="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rate_app"
            android:textColor="@color/rate_button_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/give_five_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/rate_app_dis"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <RatingBar
            android:id="@+id/rb_stars"
            style="@style/AppRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/give_five_star" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rate_button_blue"
            android:gravity="center"
            android:text="@string/rate_new"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/rb_stars" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bt_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toBottomOf="@+id/bt_send">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/rating_dialog_maybe_later"
                    android:textSize="13sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
